Simplify important user roles initialization